css/sheety.css
.sheety-body {
  background-color: #f5f9fa;
  font-family: sans-serif;
  font-size: .8em;
}
.sheety-post-list {
  position: relative;
  z-index: 100;
  float: left;
  width: 200px;
}
.sheety-comment-row {
  white-space: nowrap;
  height: 200px;
}
.sheety-post-cell, .sheety-comment-cell {
  border: 1px solid #c3cfc2;
  display: inline-block;
  width: 174px;
  height: 180px;
  vertical-align: middle;
  padding: 9px 12px;
  white-space: normal;
  overflow-y: hidden;
}
.sheety-new-comment-cell {
  border: 1px solid #c3cfc2;
  display: inline-block;
  width: 174px;
  height: 180px;
  vertical-align: middle;
  padding: 9px 12px;
  white-space: normal;
  overflow-y: hidden;
  z-index: -100;
  position: absolute;
  left: 0;
  transition: left .5s;
  background-color: #e0eddd;
}
.sheety-comment-cell {
  background-color: #e0eddd;
}
.sheety-comment-cell-hover {
  background-color: #cbdbc8;
}
.sheety-new-comment-cell .textarea {
  background-color: white;
  height: 50px;
  font-size: .7em;
}
.sheety-post-cell {
  background-color: #024d61;
  color: #e0eddd;
}
.sheety-post-cell .who {
  margin-top: 0;
  font-size: 1.8em;
  text-align: center;
  cursor: pointer;
}
.sheety-post-cell .mkcomment {
  margin-top: 10px;
  font-size: 1em;
  padding: 4px 2px;
  text-align: center;
  cursor: pointer;
}
.sheety-post-cell .who-hover, .sheety-post-cell .mkcomment-hover {
  background-color: #10586c;
}
.sheety-post-cell .mkcomment-disabled {
  color: grey;
  cursor: default;
}
.sheety-comment-cell .ctime {
  color: grey;
}
.sheety-comment-cell .author, .sheety-comment-cell .likes {
  color: #4269bd;
}
.sheety-comment-cell .author, .sheety-comment-cell .likes, .sheety-comment-cell .del {
  cursor: pointer;
}
.sheety-comment-cell .author-hover, .sheety-comment-cell .likes-hover .like-button, .sheety-comment-cell .del-hover {
  text-decoration: underline;
}
.sheety-comment-cell .likes-disabled, .sheety-comment-cell .likes-disabled .like-button {
  cursor: default;
  color: grey;
}
.sheety-comment-cell .del {
  color: grey;
}
.sheety-comment-cell .del-disabled {
  cursor: default;
  color: #cbdbc8;
}
.sheety-comment-cell .author, .sheety-comment-cell .likes, .sheety-comment-cell .del, .sheety-comment-cell .ctime {
  display: inline;
  font-size: .9em;
}
.sheety.comment-cell .content {
  margin-top: 3px;
}

